# Corners

./: .gitignore  CMakeLists.txt  Corners.cpp  Field.cpp  Field.hpp  README.md  README.txt  build.sh  build_all.sh  field.cpp  field.hpp  field_logic.cpp  field_logic.hpp  field_rendering.cpp  field_rendering.hpp  game.sh  general_set.hpp  main.cpp
bash-scripts/: build.sh  game.sh
game/: CMakeLists.txt
game/include/: field_logic.hpp  field_rendering.hpp  general.hpp
game/src/: field_logic.cpp  field_rendering.cpp
images/: README.txt
tools/: build.sh
